# dotfiles

./: .Xresources  .fehbg  .gitconfig  .gitignore  .gtkrc-2.0  .tmux.conf  .tmux.conf_  .vimrc  .vimrc_  .xinitrc  .zshrc  CONFIG  PACKAGES  PACKAGES-AUR  PACKAGES-FLATPAK  PACKAGES-OTHER  PACKAGES-PC  README.md  alias.txt  applist.txt  backup.sh  config.txt  gnome-shortcuts  main.zsh-theme  manjaro-shell  packages  tmux-cheatsheet  zathura-shortcuts
.config/: .zshrc  Trolltech.conf  greenclip.toml  kcminputrc  kdeglobals  kglobalshortcutsrc  khotkeysrc  kscreenlockerrc  ksmserverrc  ktimezonedrc  kwinrc  kwinrulesrc  kxkbrc  mimeapps.list  plasma-localerc  plasma-org.kde.plasma.desktop-appletsrc  plasmanotifyrc  plasmarc  redshift.conf
.config/GIMP/2.10/: action-history  colorrc  contextrc  controllerrc  devicerc  gimprc  menurc  parasiterc  pluginrc  sessionrc  tags.xml  themerc  toolrc
.config/SpeedCrunch/: SpeedCrunch.ini
.config/alacritty/: alacritty.yml
.config/bspwm/: bspwmrc
.config/coc/extensions/: package.json
.config/dunst/: brightness.sh  dunstrc  volume.sh
.config/flameshot/: flameshot.ini
.config/fontconfig/: fonts.bak  fonts.conf
.config/fontconfig/conf.d/: 30-icons.conf
.config/gtk-2.0/: gtkfilechooser.ini
.config/gtk-3.0/: bookmarks  settings.ini
.config/i3/: config
.config/ibus/bus/: 8651dd34e14f25154f5b4c675f91ba91-unix-0  8651dd34e14f25154f5b4c675f91ba91-unix-1
.config/kitty/: kitty.conf
.config/neofetch/: config-manjaro.conf  config.conf  config.conf.old
.config/nnn/: .lastd  .selection
.config/nnn/plugins/: preview-tui
.config/nvim/: init.vim
.config/pcmanfm/default/: pcmanfm.conf
.config/picom/: picom.conf  picom.conf.old
.config/polybar/: bars.ini  colors.ini  config.ini  config.ini.old  launch.sh  modules.ini  modules.ini.old  user_modules.ini
.config/polybar-alt/: colors.ini  config.ini  modules.ini  package-lock.json  package.json  user_modules.ini
.config/polybar/scripts/: calendar.sh  polybar-timer.sh  rofi-greenclip  updates.sh
.config/pop-shell/: config.json
.config/ranger/: rc.conf  rifle.conf  trash_history
.config/rofi/: config.rasi
.config/rofi/powermenu/: confirm.rasi  full_circle.rasi  message.rasi  powermenu.sh
.config/rofi/scripts/: android_power.sh  launcher.sh  powermenu.sh  rofi-wifi-menu.sh
.config/scripts/: brightness.sh  lock  lock-ffmpeg.sh  power.sh  screenshot.sh  volume.sh
.config/sxhkd/: SpeedCrunch.ini  sxhkdrc
.config/xnviewmp/: Xmp.ini  bookmark.ini  default.bar  default.keys  style_sheet.qss  xnview.ini
.pomo/: pomo.db
.themes/WhiteSur-dark-solid/: index.theme
.themes/WhiteSur-light-solid/: index.theme
.vim/: .netrwhist  .vimrc
.vim/ftplugin/: cpp.vim
.vim/syntax/: css.vim
.vim/undo/: %home%michael%.config%nvim%init.vim  %home%michael%.vim%.vimrc  %home%michael%.vimrc
.vim/undodir/: %home%michael%.config%alacritty%alacritty.yml  %home%michael%.config%dunst%brighnessControl.sh  %home%michael%.config%dunst%brightness.sh  %home%michael%.config%dunst%dunstrc  %home%michael%.config%dunst%volume.sh  %home%michael%.config%fontconfig%fonts.conf  %home%michael%.config%i3%config  %home%michael%.config%kitty%kitty.conf  %home%michael%.config%mimeapps.list  %home%michael%.config%neofetch%config.conf  %home%michael%.config%nnn%plugins%preview-tui  %home%michael%.config%picom%picom.conf  %home%michael%.config%polybar%bars.ini  %home%michael%.config%polybar%colors.ini  %home%michael%.config%polybar%config  %home%michael%.config%polybar%config.ini  %home%michael%.config%polybar%forest%bars.ini  %home%michael%.config%polybar%forest%config.ini  %home%michael%.config%polybar%forest%modules.ini  %home%michael%.config%polybar%launch.sh  %home%michael%.config%polybar%modules.ini  %home%michael%.config%polybar%panels%config.ini  %home%michael%.config%polybar%polybar  %home%michael%.config%polybar%preview.sh  %home%michael%.config%polybar%user_modules.ini  %home%michael%.config%ranger%rc.conf  %home%michael%.config%rofi%config.rasi  %home%michael%.config%rofi%themes%onedark.rasi  %home%michael%.config%sciv%exec%key-handler  %home%michael%.fehbg  %home%michael%.local%share%applications%vim.desktop  %home%michael%.vimrc  %home%michael%.zsh_history  %home%michael%.zshrc  %home%michael%Documents%android-apps  %home%michael%Documents%coding-challenges%.git%COMMIT_EDITMSG  %home%michael%Documents%dotfiles%.git%COMMIT_EDITMSG  %home%michael%Documents%dotfiles%PACKAGES  %home%michael%Documents%dotfiles%bin%lock  %home%michael%Documents%dotfiles%desktop_entries%code.desktop  (+22 more)
GIMP/2.10/: action-history  colorrc  controllerrc  devicerc  gimprc  sessionrc  themerc
desktop_entries/: code.desktop
etc/fonts/: local.conf
etc/lightdm/: lightdm-gtk-greeter.conf
fontconfig/conf.d/: 30-icons.conf
guides/: configure-virtual-hosts
i3/: config
kitty/: kitty.conf
neofetch/: config.conf
nnn/sessions/: @
picom/: picom.conf
polybar/: modules.ini
rofi-1.6.1/: Makefile.in  README.html  aclocal.m4  config.h.in  configure
rofi-1.6.1/lexer/: theme-lexer.c  theme-parser.c  theme-parser.h
rofi-1.6.1/resources/: resources.c
rofi-1.6.1/subprojects/libnkutils/: libnkutils-common.mk  libnkutils-nolibtool.mk  libnkutils.m4  meson.build  meson_options.txt
rofi-1.6.1/subprojects/libnkutils/man/: libnkutils-man.xml
rofi-1.6.1/subprojects/libnkutils/src/: bindings.c  colour.c  enum.c  git-version.c  gtk-settings.c  nkutils-bindings.h  nkutils-colour.h  nkutils-enum.h  nkutils-gtk-settings.h  nkutils-token.h  nkutils-uuid.h  nkutils-xdg-de.h  nkutils-xdg-theme.h  token-example.c  token.c  uuid-apr-util.c  uuid-internal.h  uuid-libuuid.c  uuid.c  xdg-de.c  xdg-theme-example.c  xdg-theme.c
rofi-1.6.1/subprojects/libnkutils/tests/: bindings.c  colour.c  enum.c  gtk-settings.c  token.c  uuid.c  xdg-de.c  xdg-theme.c
rofi-1.6.1/subprojects/libnkutils/tests/gtk-3.0/: settings.ini
rofi-1.6.1/subprojects/libnkutils/tests/gtk-4.0/: settings.ini
rofi-1.6.1/subprojects/libnkutils/tests/icons/recursive-theme-test/: index.theme
root-config/root/: .vim
to-do/: LAMP-config
(+180 files in other folders)
